Add validator to ensure start and interval are less than persons list size; Add JUnit for business layer

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -4,3 +4,5 @@ errormessage.circle.nonullelement = can't have a null element
 errormessage.circle.nosameelement = can't have same names
 errormessage.start.minvalue = can't be less than 0
 errormessage.interval.minvalue = can't be less than 1
+errormessage.interval.largerthanlistsize = interval can't be lager than list size
+errormessage.start.largerthanlistsize = start can't be lager than list size
